[gd_scene load_steps=3 format=3 uid="uid://bfa7jpa7ucj4o"]

[ext_resource type="Script" uid="uid://d0bvgdxmpqlp7" path="res://node_d.gd" id="1_lj67s"]

[sub_resource type="CanvasTexture" id="CanvasTexture_t52yl"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lj67s")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Button" type="Button" parent="Sprite2D"]
offset_left = 156.0
offset_top = 66.0
offset_right = 456.0
offset_bottom = 204.0
tooltip_text = "Hover and shrink"
text = "Button"
icon = SubResource("CanvasTexture_t52yl")

[connection signal="mouse_entered" from="Sprite2D/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Sprite2D/Button" to="." method="_on_button_mouse_exited"]
